load("@rules_python//python:packaging.bzl", "py_wheel")
load("@rules_python//python:py_library.bzl", "py_library")
load("@rules_python//python:py_test.bzl", "py_test")
load("//build/release:wheel.bzl", "stamped_wheel")

# gazelle:exclude .venv
# gazelle:exclude build
# gazelle:exclude testdata
# gazelle:exclude **/testdata
# gazelle:exclude dist

exports_files([
    "requirements.txt",
    "dist/pulumi-resource-pulumi-python",
    "dist/pulumi-resource-pulumi-python.cmd",
    "cmd/pulumi-language-python-exec",
])

# ─── SDK Library ─────────────────────────────────────────────────────────────

py_library(
    name = "pulumi_sdk",
    srcs = glob(["lib/pulumi/**/*.py"]),
    data = glob([
        "lib/pulumi/**/*.pyi",
        "lib/pulumi/py.typed",
    ]),
    imports = ["lib"],
    visibility = ["//visibility:public"],
    deps = [
        "@pypi//debugpy",
        "@pypi//dill",
        "@pypi//grpcio",
        "@pypi//packaging",
        "@pypi//pip",
        "@pypi//protobuf",
        "@pypi//pyyaml",
        "@pypi//semver",
    ],
)

# ─── Wheel ───────────────────────────────────────────────────────────────

py_wheel(
    name = "_wheel_base",
    distribution = "pulumi",
    python_tag = "py3",
    # Placeholder version — stamped_wheel patches this at build time via
    # --define PYPI_VERSION=x.y.z, avoiding py_wheel's analysis-time PEP 440
    # validation that breaks `bazel test //...` without --define.
    version = "0.0.0",
    requires = [
        'protobuf>=3.20.3,<7',
        'grpcio>=1.68.1,<2; python_version < "3.14"',
        'grpcio>=1.75.1,<2; python_version >= "3.14"',
        'dill~=0.4',
        'semver~=3.0',
        'pyyaml~=6.0',
        'debugpy~=1.8.7',
        'pip>=24.3.1',
        'packaging>=26.0',
    ],
    python_requires = ">=3.10",
    classifiers = [
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
        "Programming Language :: Python :: 3.12",
        "Programming Language :: Python :: 3.13",
        "Programming Language :: Python :: 3.14",
        "Typing :: Typed",
    ],
    homepage = "https://github.com/pulumi/pulumi",
    license = "Apache-2.0",
    summary = "Pulumi's Python SDK",
    strip_path_prefixes = ["sdk/python/lib/"],
    deps = [":pulumi_sdk"],
)

# Stamp the wheel with the real version and inject .pyi type stubs.
# py_wheel only includes .py files; stamped_wheel adds .pyi and py.typed.
stamped_wheel(
    name = "wheel",
    wheel = ":_wheel_base",
    type_stubs = glob([
        "lib/pulumi/**/*.pyi",
        "lib/pulumi/py.typed",
    ]),
    version_placeholder = "0.0.0",
    visibility = ["//visibility:public"],
)

# ─── Scripts ─────────────────────────────────────────────────────────────────

sh_binary(
    name = "pulumi-language-python-exec",
    srcs = ["cmd/pulumi-language-python-exec"],
    visibility = ["//visibility:public"],
)

sh_binary(
    name = "pulumi-resource-pulumi-python",
    srcs = ["dist/pulumi-resource-pulumi-python"],
    visibility = ["//visibility:public"],
)

# ─── Tests ───────────────────────────────────────────────────────────────────

py_library(
    name = "test_helpers",
    srcs = glob(["lib/test/**/*.py"]),
    imports = ["lib"],
    deps = [
        ":pulumi_sdk",
        "@pypi//pytest",
        "@pypi//protobuf",
        "@pypi//grpcio",
    ],
)

# Test targets using pytest runner to handle relative imports properly.
[py_test(
    name = src.replace("lib/test/", "").replace(".py", ""),
    srcs = ["run_pytest.py"] + glob(["lib/test/**/*.py"]),
    args = ["-xvs", "sdk/python/" + src],
    imports = ["lib"],
    main = "run_pytest.py",
    deps = [
        ":pulumi_sdk",
        "@pypi//pytest",
        "@pypi//pytest_asyncio",
        "@pypi//protobuf",
        "@pypi//grpcio",
        "@pypi//pyyaml",
    ],
    tags = ["python"],
) for src in glob(
    ["lib/test/test_*.py"],
    exclude = [
        "lib/test/test_monitor_termination.py",
    ],
)]
