[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pulumi"
version = "3.225.0"
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.10"
description = "Pulumi's Python SDK"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
]
dependencies = [
    # We deliberately allow older versions of protobuf and grpcio (3.20.3 and 1.68.1 respectively)
    # to support users who require older versions of these dependencies.
    # grpcio 1.75.1 is needed for Python 3.14.
    'protobuf>=3.20.3,<7',
    'grpcio>=1.68.1,<2; python_version < "3.14"',
    'grpcio>=1.75.1,<2; python_version >= "3.14"',
    'dill~=0.4',
    'semver~=3.0',
    'pyyaml~=6.0',
    'debugpy~=1.8.7',
    'pip>=24.3.1',
    "packaging>=26.0",
    # OpenTelemetry dependencies for tracing
    'opentelemetry-api>=1.20.0',
    'opentelemetry-sdk>=1.20.0',
    'opentelemetry-exporter-otlp-proto-grpc>=1.20.0',
    'opentelemetry-instrumentation-grpc>=0.41b0',
]

[dependency-groups]
dev = [
    'mypy==1.17.1',
    'pyright==1.1.404',
    'pytest~=8.4.0',
    'pytest-timeout>=2.3.1',
    'pytest-xdist>=3.8.0',
    "pytest-cov>=7.0.0",
    'types-pyyaml>=6.0.12.20241230',
    'types-protobuf>=5.29.1.20241207',
    'pytest-asyncio~=1.2.0',
    'coverage~=7.13.1',
    'wheel>=0.45.1',
    'ruff==0.13.2',
    "build>=1.2.2.post1",
    "twine>=6.0.1",
    "types-grpcio>=1.0.0.20250703",
]

[project.urls]
Documentation = "https://www.pulumi.com"
Changelog = "https://github.com/pulumi/pulumi/blob/master/CHANGELOG.md"
GitHub = "https://github.com/pulumi/pulumi"

[tool.hatch.version]
path = "lib/pulumi/_version.py"
pattern = '_VERSION = "(?P<version>[^"]+)"'

[tool.hatch.build.targets.wheel]
packages = ["lib/pulumi"]
# The latest version is 2.4, but Poetry <= 1.8.4 has issues with it.
# https://github.com/python-poetry/poetry/issues/9885
core-metadata-version = "2.3"

[tool.uv]
# This ensures that the version for pulumi in uv.lock is updated when the
# version from _version changes.
upgrade-package = ["pulumi"]

[tool.pyright]
venvPath = "."
venv = ".venv"
include = ["lib/test_types"]
strict = ["lib/test_types"]

[tool.ruff]
target-version = "py310"

include = [
    "lib/pulumi/**.py",
    "lib/pulumi/**.pyi",
    "lib/test/**.py",
    "cmd/pulumi-language-python-exec",
]
extend-exclude = [
    "*_pb2.py",
    "*_pb2.pyi",
    "*_pb2_grpc.py",
    "*_pb2_grpc.pyi",
    "lib/test/provider/experimental/testdata/analyzer-errors/syntax-error/component.py",
]

[tool.ruff.lint]
exclude = ["lib/test/**.py"]
select = [
    "E4",    # Defaults are E4", "E7", "E9", "F"
    "E7",
    "E9",
    "F",
    "A004",  # flake8-builtins - builtin-import-shadowing
    "PL",    # pylint rules
    "ICN",   # flake8-import-conventions
    "ASYNC", # flake8-async
    "BLE",   # flake8-blind-except
    "S102",  # use of exec builtin
    "UP",    # pyupgrade
]
ignore = [
    "PLR",     # pylint refactor rules
    "S101",    # use of assert, probably want to re-enable this
    "E731",    # lambda-assignment
    "E741",    # ambiguous-variable-name
    "PLC0415", # `import` should be at the top-level of a file
    "UP045",   # non-pep604-annotation-optional
    "UP007",   # non-pep604-annotation-union
]

[tool.ruff.lint.per-file-ignores]
"lib/pulumi/runtime/proto/*" = [
    "F403", # undefined-local-with-import-star
]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
# The minimum Python version we support
python_version = "3.10"

[[tool.mypy.overrides]]
module = [
    "dill",
    "google.protobuf.pyext._message",
    "grpc.experimental.aio",
    "google.protobuf.pyext",
    "pulumi.runtime.proto.*",
    "opentelemetry.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["pulumi.runtime.proto.*"]
ignore_errors = true
