load("@rules_go//go:def.bzl", "go_test")

go_test(
    name = "about_test",
    srcs = ["about_test.go"],
    data = ["//pkg/cmd/pulumi"],
    tags = [
        "integration",
        "manual",
    ],
    timeout = "long",
    deps = [
        "//pkg/testing/integration",
        "//sdk/go/common/testing",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
    ],
)
